# cc-downloader-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run.sh
.github/workflows/: build.yaml
src/: cc_stream.rs  fast_dl.rs  ft.rs  gz_dec.rs  html2md.rs  http.rs  main.rs  text.rs  warc.rs
