[package]
name = "cc-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = "52.1.0"
fasttext = "0.7.8"
futures-util = { version = "0.3.30" }
lindera = { version = "0.32.2", features = ["unidic"] }
once_cell = "1.19.0"
parquet = { version = "52.1.0", features = ["async"] }
reqwest = { version = "0.12.5", features = ["stream", "rustls-tls-webpki-roots"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
unicode-normalization = "0.1.23"
