[package]
name = "cc-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
arrow = "53.2.0"
encoding_rs = "0.8.35"
futures-util = { version = "0.3.31" }
htmd = "0.1.6"
parquet = { version = "53.2.0", features = ["async"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["stream", "rustls-tls-webpki-roots"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
unicode-normalization = "0.1.24"
